--- a/Milestone-2/ASSIGNMENT/website-with-css/src/Styles/Footer.css
+++ b/Milestone-2/ASSIGNMENT/website-with-css/src/Styles/Footer.css
@@ -1,6 +1,7 @@
 .footer-section {
     background-color: #1B2433;
 }
+
 .footer-container {
     padding: 40px;
     display: flex;
@@ -12,6 +13,7 @@
     border-bottom: 2px solid #293241;
     border-radius: 2px;
 }
+
 /* Title */
 .ft-title {
     color: #1A8EFD;
@@ -21,12 +23,14 @@
     font-weight: bold;
     letter-spacing: .8px;
 }
+
 .ft-sign {
     color: #1ECAB0;
     font-family: Cambria, sans-serif;
     font-size: 40px;
     font-weight: bold;
 }
+
 .ft-description {
     width: 420px;
     margin: 16px 0 40px;
@@ -36,6 +40,7 @@
     letter-spacing: .8px;
     line-height: 1.7rem;
 }
+
 .ft-input-title {
     color: white;
     font-family: 'Rubik', sans-serif;
@@ -43,6 +48,7 @@
     font-weight: bold;
     letter-spacing: .8px;
 }
+
 .ft-input {
     width: 300px;
     margin: 20px 8px 0 0;
@@ -56,6 +62,7 @@
     font-size: 18px;
     letter-spacing: .8px;
 }
+
 .ft-btn {
     padding: 14px 18px;
     color: white;
@@ -69,11 +76,13 @@
     cursor: pointer;
     transition: all .4s ease;
 }
+
 .ft-btn:hover {
     color: #1A8EFD;
     background-color: white;
     border: 2px solid #1A8EFD;
 }
+
 /* Lists */
 .ft-list-title {
     margin: 16px 0;
@@ -82,9 +91,11 @@
     font-weight: bold;
     letter-spacing: .8px;
 }
+
 .ft-list-items {
     list-style-type: none;
 }
+
 .ft-list-items li a {
     text-decoration: none;
     color: #a5a7ac;
@@ -92,6 +103,7 @@
     border-bottom: 2px dotted transparent;
     transition: border .2s ease;
 }
+
 .ft-list-items li {
     margin: 24px 0;
     font-family: 'Rubik', sans-serif;
@@ -99,9 +111,11 @@
     font-weight: bold;
     letter-spacing: .8px;
 }
+
 .ft-list-items li a:hover {
     border-bottom: 2px dotted #a5a7ac;
 }
+
 /* CopyRight */
 .ft-copyright {
     padding: 24px 40px;
@@ -114,6 +128,7 @@
     font-weight: bold;
     letter-spacing: .8px;
 }
+
 .ft-social-links {
     list-style-type: none;
     display: flex;
@@ -121,6 +136,7 @@
     align-items: center;
     gap: 12px;
 }
+
 .ft-social-links li a {
     width: 40px;
     height: 40px;
@@ -131,40 +147,50 @@
     border-radius: 50%;
     cursor: pointer;
 }
+
 .ft-social-links li a svg {
     width: 24px;
     height: 24px;
     padding: 1px;
 }
+
 .ft-social-links li a svg path {
     fill: #cbcdd3;
 }
-.ft-social-links li a:hover, .ft-social-links li a:hover svg path {
+
+.ft-social-links li a:hover,
+.ft-social-links li a:hover svg path {
     fill: #1A8EFD;
     border: 2px solid #1A8EFD;
 }
+
 /* Responsive */
 @media screen and (max-width: 700px) {
     .footer-container {
         padding: 24px;
     }
+
     .ft-description {
         width: 100%;
         margin: 16px 0 24px;
     }
+
     .ft-input {
         width: 100%;
         margin: 16px 0;
     }
+
     .ft-btn {
         width: 100%;
         margin: 0 0 16px;
     }
+
     .ft-copyright {
         padding: 18px;
         display: block;
         text-align: center;
     }
+
     .ft-social-links {
         margin: 16px 0 0;
     }
