--- a/Milestone-2/ASSIGNMENT/website-with-css/src/Styles/Hero.css
+++ b/Milestone-2/ASSIGNMENT/website-with-css/src/Styles/Hero.css
@@ -6,11 +6,13 @@
     gap: 24px;
     background: linear-gradient(to right, #ECF2FF, #FBFCFF);
 }
+
 /* Text section */
 .text-section {
     width: 60%;
     padding: 0 32px;
 }
+
 .text-headline {
     margin-bottom: 12px;
     color: rgb(77, 75, 75);
@@ -19,6 +21,7 @@
     font-weight: bold;
     letter-spacing: .7px;
 }
+
 .text-title {
     width: 500px;
     color: black;
@@ -26,6 +29,7 @@
     font-size: 40px;
     font-weight: bold;
 }
+
 .text-descritpion {
     width: 475px;
     margin: 32px 0;
@@ -35,6 +39,7 @@
     letter-spacing: .7px;
     line-height: 1.6rem;
 }
+
 .text-appointment-btn {
     padding: 14px 20px;
     color: white;
@@ -48,11 +53,13 @@
     cursor: pointer;
     transition: all .4s ease;
 }
+
 .text-appointment-btn:hover {
     color: #1A8EFD;
     background-color: transparent;
     border: 1px solid #1A8EFD;
 }
+
 .text-stats {
     margin-top: 40px;
     display: flex;
@@ -60,15 +67,18 @@
     align-items: center;
     gap: 48px;
 }
+
 .text-stats-container {
     text-align: center;
 }
-.text-stats-container > p {
+
+.text-stats-container>p {
     color: rgb(77, 75, 75);
     font-family: 'Poppins', sans-serif;
     font-size: 22px;
     letter-spacing: .7px;
 }
+
 .text-stats-container p:first-child {
     margin-bottom: 8px;
     color: #1A8EFD;
@@ -76,16 +86,19 @@
     font-size: 32px;
     font-weight: bold;
 }
+
 /* Image section */
 .hero-image-section {
     width: 40%;
     max-width: 100%;
     text-align: center;
 }
+
 .hero-image1 {
     width: 100%;
     height: auto;
 }
+
 /* Scroll Btn */
 .scroll-up {
     width: 45px;
@@ -104,45 +117,58 @@
     font-size: 24px;
     z-index: 20;
     cursor: pointer;
-}  
-.show-scroll {
-  display: flex;
 }
+
+.show-scroll {
+    display: flex;
+}
+
 /* Responsive */
 @media screen and (max-width: 900px) {
     .hero-image-section {
         display: none;
     }
+
     .text-section {
         width: 100%;
         padding: 0;
     }
-    .text-title, .text-descritpion {
+
+    .text-title,
+    .text-descritpion {
         width: 100%;
     }
 }
+
 @media screen and (max-width: 600px) {
     .text-headline {
         font-size: 20px;
     }
+
     .text-title {
         font-size: 28px;
     }
+
     .text-descritpion {
         font-size: 16px;
     }
+
     .text-appointment-btn {
         font-size: 16px;
     }
+
     .text-stats {
         gap: 18px;
     }
-    .text-stats-container > p {
+
+    .text-stats-container>p {
         font-size: 16px;
     }
+
     .text-stats-container p:first-child {
         font-size: 22px;
     }
+
     .scroll-up {
         bottom: 32px;
         right: 32px;
