--- a/Milestone-2/ASSIGNMENT/website-with-css/src/Styles/Navbar.css
+++ b/Milestone-2/ASSIGNMENT/website-with-css/src/Styles/Navbar.css
@@ -6,20 +6,24 @@
     height: 80px;
     background-color: white;
 }
+
 .navbar-title a {
     color: #1A8EFD;
     letter-spacing: .6px;
     text-decoration: none;
 }
+
 .navbar-title {
     font-family: 'Poppins', sans-serif;
 }
+
 .navbar-sign {
     color: #54de54;
     font-family: Cambria, sans-serif;
     font-size: 40px;
     font-weight: bold;
 }
+
 .navbar-items {
     list-style-type: none;
     display: flex;
@@ -28,18 +32,22 @@
     gap: 32px;
     font-family: 'Rubik', sans-serif;
 }
-.navbar-items > li {
+
+.navbar-items>li {
     list-style-type: none;
 }
+
 .navbar-links {
     text-decoration: none;
     color: black;
     font-size: 18px;
     letter-spacing: .8px;
 }
+
 .navbar-links:hover {
     color: #0cc2ea;
 }
+
 .navbar-btn {
     padding: 14px 20px;
     color: white;
@@ -53,23 +61,28 @@
     cursor: pointer;
     transition: all .4s ease;
 }
+
 .navbar-btn:hover {
     color: #1A8EFD;
     background-color: white;
     border: 1px solid #1A8EFD;
 }
+
 /* Hamburger Icon */
 .mobile-nav {
     display: none;
 }
+
 .hamb-icon {
     width: 26px;
     height: 26px;
     cursor: pointer;
 }
+
 .hamb-icon:hover {
     color: #0cc2ea;
 }
+
 /* Mobile Navbar */
 .mobile-navbar {
     display: flex;
@@ -85,17 +98,21 @@
     align-items: center;
     transition: left .5s ease-in-out;
 }
+
 .mobile-navbar-close {
     position: absolute;
     top: 28px;
     right: 28px;
 }
+
 .mobile-navbar-close .hamb-icon:hover {
     color: rgb(255, 22, 22);
 }
+
 .open-nav {
     left: 0;
 }
+
 .mobile-navbar-links {
     list-style-type: none;
     display: flex;
@@ -104,6 +121,7 @@
     gap: 24px;
     text-align: center;
 }
+
 .mobile-navbar-links li a {
     text-decoration: none;
     color: black;
@@ -112,14 +130,19 @@
     letter-spacing: .8px;
     transition: color .3s ease-in-out;
 }
+
 .mobile-navbar-links li a:hover {
     color: #0cc2ea;
 }
+
 /* Responsive */
 @media screen and (max-width: 900px) {
-    .navbar-btn, .navbar-items {
+
+    .navbar-btn,
+    .navbar-items {
         display: none;
     }
+
     .mobile-nav {
         display: block;
     }
